<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:paddingTop="50dp"
        android:paddingBottom="@dimen/default_padding"
        tools:context=".DialogsLevel1Activity">
        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textStyle="italic"
            android:textSize="25sp"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            android:textStyle="italic"
            android:textSize="40sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/yearTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerYear"
            android:textStyle="italic"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/monthTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerMonth"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:textSize="40sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/dayTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/timerDay"
            android:textStyle="italic"
            android:textSize="40sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/hourTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/timerHour"
            android:textStyle="italic"
            android:textSize="40sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/minuteTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/timerMinute"
            android:textStyle="italic"
            android:textSize="40sp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/back"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/back"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>